--- a/EpisodeWeb/EpisodeWeb.csproj
+++ b/EpisodeWeb/EpisodeWeb.csproj
@@ -36,6 +36,8 @@
     <Content Include="wwwroot\static\index.html" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="HangFire" Version="1.6.12" />
+    <PackageReference Include="Hangfire.MemoryStorage" Version="1.5.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
