--- a/EpisodeWeb/EpisodeWeb.csproj
+++ b/EpisodeWeb/EpisodeWeb.csproj
@@ -40,6 +40,7 @@
     <Content Include="wwwroot\static\index.html" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="4.2.0" />
     <PackageReference Include="HangFire" Version="1.6.12" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.5.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
@@ -47,17 +48,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LibOtrProcessor\LibOtrProcessor.fsproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="FSharp.Core">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\FSharp\.NETFramework\v4.0\4.4.1.0\FSharp.Core.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\VideoInfos\VideoInfos.fsproj" />
   </ItemGroup>
 
 </Project>
