--- a/EpisodeWeb/EpisodeWeb.csproj
+++ b/EpisodeWeb/EpisodeWeb.csproj
@@ -54,7 +54,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VideoInfos\VideoInfos.fsproj" />
+    <ProjectReference Include="..\FileProcessor\FileProcessor.fsproj" />
   </ItemGroup>
 
 </Project>
